...
    <string name="action_confirm">Confirm</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_return">Return</string>
    <string name="action_positive">Yes</string>
    <string name="action_negative">No</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copied: %s</string>
    <string name="action_app_not_installed">Required App is not installed</string>
    <string name="action_scroll_up">Up</string>
    <string name="action_scroll_down">Down</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_copy_name">Copy: %s</string>
...
    <string name="book_annotation_type_book_mark">Book Mark</string>
    <string name="book_annotation_type_page_mark">Page Mark</string>

    <string name="book_annotation_page_marked">Page %d marked.</string>
    <string name="book_annotation_page_unmarked">Page %d unmarked.</string>

    <string name="book_annotation_delete">Delete</string>
    <string name="book_annotation_delete_description">Do you really want to delete this %s?</string>

    <string name="book_annotation_note">Note</string>

    <string name="book_annotation_list_divide_title" translatable="false">%s</string>
    <string name="book_annotation_list_divide_count" translatable="false">(%d)</string>
...
    <string name="book_annotation_menu_item_delete">Delete</string>
    <string name="book_annotation_menu_item_change_detach">Change color detach</string>

    <!-- ANNOTATION POPUP LAYOUT -->
    <string name="annotation_popup_filter_open">Open</string>
    <string name="annotation_tab_item_filter">Filter</string>
    <string name="annotation_tab_item_color">Color</string>
    <string name="annotation_tab_item_chapters">Chapters</string>

    <string name="annotation_popup_filter_favorite">Favorite</string>
    <string name="annotation_popup_filter_detach">Detach</string>
    <string name="annotation_popup_filter_page_marker">Page marker</string>
    <string name="annotation_popup_filter_book_marker">Book marker</string>
...
