<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/book_annotation_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/annotation_margin"
    android:background="@drawable/custom_ripple_annotation"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

</LinearLayout>